# twitter2_rs

./: .gitignore  Cargo.toml
twitter2/: Cargo.toml  response.rs
twitter2/src/: client.rs  entity.rs  id.rs  lib.rs  limit.rs  media.rs  model.rs  request.rs  request_data.rs  request_options.rs  response.rs  timeline.rs  tweet.rs  user.rs
twitter2/src/auth/: bearer_token.rs  mod.rs  oauth10a.rs
twitter2_tests/: Cargo.toml
twitter2_tests/src/: main.rs
