[package]
name = "twitter2"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4.23", features = ["serde"] }
enumscribe = "0.1.2"
hmac = { version = "0.12.1", features = ["std"] }
libshire = { git = "https://github.com/pantonshire/libshire", branch = "main", features = ["serde"] }
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha1 = "0.10.5"
